Adjusted Extra Feature Section

--- a/index.html
+++ b/index.html
@@ -58,16 +58,18 @@
 
     <!-- Main Hero Structure -->
 
-    <section class="mobile main-hero">
-        <div class="hero-content">
-            <div class="featured-asset float-effect delay">
-                <img src="img/asset-phones.svg" />
-            </div>
-            <h1 class="heading lg white">Comece o seu próprio banco digital!</h1>
-            <p class="caption lg subtle-w">Criar um banco digital é bem mais simples do que você imagina. <b>Seja uma fintech, sem mudar quem você é.</b></p>
-            <div class="action-holder">
-                <a href="#" class="btn primary-btn md">Comece Agora</a>
-                <a href="#" class="btn neutral-btn md">Saiba Mais</a>
+    <section class="main-hero">
+        <div class="main-hero-container">
+            <div class="hero-content">
+                <div class="featured-asset float-effect delay">
+                    <img src="img/asset-phones.svg" />
+                </div>
+                <h1 class="heading lg white">Comece o seu próprio banco digital!</h1>
+                <p class="caption lg subtle-w">Criar um banco digital é bem mais simples do que você imagina. <b>Seja uma fintech, sem mudar quem você é.</b></p>
+                <div class="action-holder">
+                    <a href="#" class="btn primary-btn md">Comece Agora</a>
+                    <a href="#" class="btn neutral-btn md">Saiba Mais</a>
+                </div>
             </div>
         </div>
     </section>
@@ -162,17 +164,17 @@
 
     <section class="extra-features">
         <div class="container">
-            <div class="row">
+            <div class="row align-items-center">
 
                 <!-- Extra Feature -->
 
                 <div class="col-sm-12 col-md-6">
                     <div class="simple-content">
-                        <div class="icon-holder">
+                        <div class="featured-holder">
                             <img src="img/icon-prepago.svg">
-                            <h3 class="heading md dark">Cartão pré-pago internacional</h3>
+                            <h3 class="heading md white">Cartão pré-pago internacional</h3>
                         </div>
-                        <p class="caption sm subtle">Forneça cartões Visa e MasterCard com a sua identidade visual. O correntista recarrega o cartão com o valor desejado, podendo utilizar a função crédito ou débito em estabelecimentos físicos e lojas online.</p>
+                        <p class="caption sm subtle-w">Forneça cartões Visa e MasterCard com a sua identidade visual. O correntista recarrega o cartão com o valor desejado, podendo utilizar a função crédito ou débito em estabelecimentos físicos e lojas online.</p>
                     </div>
                 </div>
 
@@ -180,26 +182,26 @@
 
                 <div class="col-sm-12 col-md-6">
                     <div class="simple-content">
-                        <div class="icon-holder">
+                        <div class="featured-holder">
                             <img src="img/icon-recarga.svg">
-                            <h3 class="heading md dark">Recarga de Celular</h3>
+                            <h3 class="heading md white">Recarga de Celular</h3>
                         </div>
-                        <p class="caption sm subtle">Ofereça recarga de celular para seus clientes através do saldo de suas contas digitais e seja comissionado pelas operações.</p>
+                        <p class="caption sm subtle-w">Ofereça recarga de celular para seus clientes através do saldo de suas contas digitais e seja comissionado pelas operações.</p>
                     </div>
                 </div>
 
             </div>
-            <div class="row">
+            <div class="row align-items-center">
 
                 <!-- Extra Feature -->
 
                 <div class="col-sm-12 col-md-6">
                     <div class="simple-content">
-                        <div class="icon-holder">
+                        <div class="featured-holder">
                             <img src="img/icon-emprestimo.svg">
-                            <h3 class="heading md dark">Empréstimos para Pessoa Jurídica</h3>
+                            <h3 class="heading md white">Empréstimos para Pessoa Jurídica</h3>
                         </div>
-                        <p class="caption sm subtle">Seus correntistas PJ agora podem solicitar um empréstimo com agilidade. Você apoia o negócio do seu cliente, aumentando o volume transacionado e sendo comissionado pela aprovação dos empréstimos.</p>
+                        <p class="caption sm subtle-w">Seus correntistas PJ agora podem solicitar um empréstimo com agilidade. Você apoia o negócio do seu cliente, aumentando o volume transacionado e sendo comissionado pela aprovação dos empréstimos.</p>
                     </div>
                 </div>
 
@@ -207,11 +209,11 @@
 
                 <div class="col-sm-12 col-md-6">
                     <div class="simple-content">
-                        <div class="icon-holder">
+                        <div class="featured-holder">
                             <img src="img/icon-api.svg">
-                            <h3 class="heading md dark">Integração via API</h3>
+                            <h3 class="heading md white">Integração via API</h3>
                         </div>
-                        <p class="caption sm subtle">Integre sua plataforma de negócios utilizando nossas APIs e disponibilize para seus clientes os melhores e mais variados recursos de um banco digital. Deixa que a gente cuida da segurança e aspectos regulatórios. Assim você se concentra no seu cliente e aumenta sua rentabilidade.</p>
+                        <p class="caption sm subtle-w">Integre sua plataforma de negócios utilizando nossas APIs e disponibilize para seus clientes os melhores e mais variados recursos de um banco digital. Deixa que a gente cuida da segurança e aspectos regulatórios. Assim você se concentra no seu cliente e aumenta sua rentabilidade.</p>
                     </div>
                 </div>
             </div>
