Added Benefits Section

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </div>
                 <div class="col">
                    <nav class="main-nav desktop">
-                       <a href="#more-section" class="link white">Saiba Mais</a>
+                       <a href="https://marketplace-sandbox.qgx.codes/entrar" class="link white">Comece Agora</a>
                        <a href="https://marketplace-sandbox.qgx.codes/entrar" class="btn lg dark-btn">Entrar</a>
                    </nav>
                 </div>
@@ -87,6 +87,68 @@
      </div>
     </section>
 
+    <!-- Benefits Section -->
+
+    <section class="benefits">
+      <div class="container">
+          <div class="row">
+              <div class="col">
+                <div class="title-holder">
+                    <h3 class="heading xmd dark">Um mundo de benefícios para o seu negócio</h3>
+                </div>
+              </div>
+          </div>
+          <div class="row">
+
+              <!-- Benefit -->
+
+              <div class="col-sm-12 col-md-4">
+                  <div class="benefit">
+                      <div class="image-holder primary">
+                          <span class="icon icon-hold"></span>
+                      </div>
+                      <div class="content-holder">
+                          <h4 class="heading sm dark">Democratização do sistema financeiro</h4>
+                          <p class="caption md subtle">Ganhe o controle das transações financeiras de toda a sua empresa. Com a QGX, você tem o controle sobre as suas taxas,  históricos de movimentações e muito mais.</p>
+                          <a href="#" class="link neutral-link">Comece Agora</a>
+                      </div>
+                  </div>
+              </div>
+
+              <!-- Benefit -->
+
+              <div class="col-sm-12 col-md-4">
+                <div class="benefit">
+                    <div class="image-holder secondary">
+                        <span class="icon icon-handshake"></span>
+                    </div>
+                    <div class="content-holder">
+                        <h4 class="heading sm dark">Comece agora e cancele quando quiser</h4>
+                        <p class="caption md subtle">Assim como nosso setup é extremamente rápido e fácil, você não fica preso a nenhum contrato extenso e cheio de armadilhas. Comece agora e cancele quando quiser! <b>Estamos aqui para melhorar o seu negócio e crescer junto com você!</b></p>
+                        <a href="#" class="link neutral-link">Comece Agora</a>
+                    </div>
+                </div>
+            </div>
+
+            <!-- Benefit -->
+
+            <div class="col-sm-12 col-md-4">
+                <div class="benefit">
+                    <div class="image-holder darker">
+                        <span class="icon icon-transfer"></span>
+                    </div>
+                    <div class="content-holder">
+                        <h4 class="heading sm dark">Monetize as transações da sua empresa</h4>
+                        <p class="caption md subtle">Aqui, você cobra as taxas, ganha comissões pelas interações de funcionários e clientes, seja por uma recarga de celular, uma solicitação de empréstimo aprovada e muito mais.</p>
+                        <a href="#" class="link primary-link">Comece Agora</a>
+                    </div>
+                </div>
+            </div>
+
+          </div>
+      </div>
+    </section>
+
     <!-- Features Section -->
 
     <section id="second-anchor" class="features">
@@ -103,7 +165,7 @@
                 <div class="col-sm-12 col-md-6">
                     <div class="simple-content">
                         <h3 class="heading md dark">Design sofisticado e opções de templates.</h3>
-                        <p class="caption sm subtle">Você vai poder customizar sua conta digital com vários modelos de design e dar aquele ar de sofisticação. Isso tudo sem abrir mão da simplicidade necessária para atender a todos os perfis de usuários. Versões para Web, Android e iOS.</p>
+                        <p class="caption xmd subtle">Você vai poder customizar sua conta digital com vários modelos de design e dar aquele ar de sofisticação. Isso tudo sem abrir mão da simplicidade necessária para atender a todos os perfis de usuários. Versões para Web, Android e iOS.</p>
                     </div>
                 </div>
             </div>
@@ -119,7 +181,7 @@
                 <div class="col-sm-12 col-md-6">
                     <div class="simple-content">
                         <h3 class="heading md dark">Compra e venda via QR Code? Aqui você pode.</h3>
-                        <p class="caption sm subtle">Muito mais agilidade! Sem burocracia, sem maquininhas, com baixo custo e com opção de cashback. Tudo de forma rápida e segura. Um novo jeito de vender, uma nova forma de pagar. Seus clientes e parceiros agradecem.</p>
+                        <p class="caption xmd subtle">Muito mais agilidade! Sem burocracia, sem maquininhas, com baixo custo e com opção de cashback. Tudo de forma rápida e segura. Um novo jeito de vender, uma nova forma de pagar. Seus clientes e parceiros agradecem.</p>
                     </div>
                 </div>
             </div>
@@ -135,7 +197,7 @@
                 <div class="col-sm-12 col-md-6">
                     <div class="simple-content">
                         <h3 class="heading md dark">Saques 24 horas</h3>
-                        <p class="caption sm subtle">Seus clientes podem realizar saques em terminais do Banco24Horas via QR Code e utilizando o aplicativo no celular, sem precisar do cartão físico. Mas eles também vão poder sacar pelo método tradicional, se preferirem, com o cartão pré-pago da sua marca no Banco24Horas ou em Casas Lotéricas.</p>
+                        <p class="caption xmd subtle">Seus clientes podem realizar saques em terminais do Banco24Horas via QR Code e utilizando o aplicativo no celular, sem precisar do cartão físico. Mas eles também vão poder sacar pelo método tradicional, se preferirem, com o cartão pré-pago da sua marca no Banco24Horas ou em Casas Lotéricas.</p>
                     </div>
                 </div>
             </div>
@@ -151,7 +213,7 @@
                 <div class="col-sm-12 col-md-6">
                     <div class="simple-content">
                         <h3 class="heading md dark">Pagamento de contas</h3>
-                        <p class="caption sm subtle">Facilite a vida de seus clientes e parceiros. Eles vão poder realizar pagamento de boletos, contas de água, luz, gás, telefone e etc. dentro do seu banco digital.</p>
+                        <p class="caption xmd subtle">Facilite a vida de seus clientes e parceiros. Eles vão poder realizar pagamento de boletos, contas de água, luz, gás, telefone e etc. dentro do seu banco digital.</p>
                     </div>
                 </div>
             </div>
@@ -171,7 +233,7 @@
                 <div class="col-sm-12 col-md-6">
                     <div class="simple-content">
                         <div class="featured-holder">
-                            <img src="img/icon-prepago.svg">
+                            <span class="icon icon-cards"></span>
                             <h3 class="heading md white">Cartão pré-pago internacional</h3>
                         </div>
                         <p class="caption sm subtle-w">Forneça cartões Visa e MasterCard com a sua identidade visual. O correntista recarrega o cartão com o valor desejado, podendo utilizar a função crédito ou débito em estabelecimentos físicos e lojas online.</p>
@@ -183,7 +245,7 @@
                 <div class="col-sm-12 col-md-6">
                     <div class="simple-content">
                         <div class="featured-holder">
-                            <img src="img/icon-recarga.svg">
+                            <span class="icon icon-recarga"></span>
                             <h3 class="heading md white">Recarga de Celular</h3>
                         </div>
                         <p class="caption sm subtle-w">Ofereça recarga de celular para seus clientes através do saldo de suas contas digitais e seja comissionado pelas operações.</p>
@@ -198,7 +260,7 @@
                 <div class="col-sm-12 col-md-6">
                     <div class="simple-content">
                         <div class="featured-holder">
-                            <img src="img/icon-emprestimo.svg">
+                            <span class="icon icon-emprestimo"></span>
                             <h3 class="heading md white">Empréstimos para Pessoa Jurídica</h3>
                         </div>
                         <p class="caption sm subtle-w">Seus correntistas PJ agora podem solicitar um empréstimo com agilidade. Você apoia o negócio do seu cliente, aumentando o volume transacionado e sendo comissionado pela aprovação dos empréstimos.</p>
@@ -210,7 +272,7 @@
                 <div class="col-sm-12 col-md-6">
                     <div class="simple-content">
                         <div class="featured-holder">
-                            <img src="img/icon-api.svg">
+                            <span class="icon icon-api"></span>
                             <h3 class="heading md white">Integração via API</h3>
                         </div>
                         <p class="caption sm subtle-w">Integre sua plataforma de negócios utilizando nossas APIs e disponibilize para seus clientes os melhores e mais variados recursos de um banco digital. Deixa que a gente cuida da segurança e aspectos regulatórios. Assim você se concentra no seu cliente e aumenta sua rentabilidade.</p>
@@ -238,7 +300,7 @@
 
             <!-- Plans Row -->
 
-            <div class="row spread">
+            <div class="row bt-spread">
 
                 <!-- Plan Card -->
 
@@ -252,7 +314,7 @@
                         <div class="card-content">
                             <span class="plan-item disabled">
                                 <i class="icon icon-check"></i>
-                                Internet Banking
+                                Versão Web - Internet Banking
                             </span>
                             <span class="plan-item active">
                                 <i class="icon icon-check"></i>
@@ -298,9 +360,17 @@
                                 <i class="icon icon-check"></i>
                                 Integração via API
                             </span>
+                            <span class="plan-item disabled">
+                                <i class="icon icon-check"></i>
+                                Publicação do App na App Store e Google Play
+                            </span>
+                            <span class="plan-item disabled">
+                                <i class="icon icon-check"></i>
+                                Versão Web do Internet Banking com a URL do Cliente
+                            </span>
                         </div>
                         <div class="action-holder">
-                            <a href="https://marketplace-sandbox.qgx.codes/entrar" class="btn neutral-btn md">Começar Agora</a>
+                            <a href="https://marketplace-sandbox.qgx.codes/entrar" class="btn neutral-btn md">Comece Agora</a>
                         </div>
                     </div>
                 </div>
@@ -317,7 +387,7 @@
                         <div class="card-content">
                             <span class="plan-item active">
                                 <i class="icon icon-check"></i>
-                                Internet Banking
+                                Versão Web - Internet Banking
                             </span>
                             <span class="plan-item active">
                                 <i class="icon icon-check"></i>
@@ -362,6 +432,14 @@
                             <span class="plan-item disabled">
                                 <i class="icon icon-check"></i>
                                 Integração via API
+                            </span>
+                            <span class="plan-item disabled">
+                                <i class="icon icon-check"></i>
+                                Publicação do App na App Store e Google Play
+                            </span>
+                            <span class="plan-item disabled">
+                                <i class="icon icon-check"></i>
+                                Versão Web do Internet Banking com a URL do Cliente
                             </span>
                         </div>
                         <div class="action-holder">
@@ -382,7 +460,7 @@
                         <div class="card-content">
                             <span class="plan-item">
                                 <i class="icon icon-check"></i>
-                                Internet Banking
+                                Versão Web - Internet Banking
                             </span>
                             <span class="plan-item">
                                 <i class="icon icon-check"></i>
@@ -428,9 +506,17 @@
                                 <i class="icon icon-check"></i>
                                 Integração via API
                             </span>
+                            <span class="plan-item">
+                                <i class="icon icon-check"></i>
+                                Publicação do App na App Store e Google Play
+                            </span>
+                            <span class="plan-item">
+                                <i class="icon icon-check"></i>
+                                Versão Web do Internet Banking com a URL do Cliente
+                            </span>
                         </div>
                         <div class="action-holder">
-                            <a href="https://marketplace-sandbox.qgx.codes/plano-avancado" class="btn secondary-btn md">Fale com um especialista</a>
+                            <a href="https://marketplace-sandbox.qgx.codes/plano-avancado" class="btn secondary-btn md">Consulte um especialista</a>
                         </div>
                     </div>
                 </div>
@@ -446,7 +532,7 @@
            <h6 class="heading md white">Nossa plataforma permite que você opere como um banco digital</h6>
            <p class="caption md subtle-w">e tenha uma fonte alternativa de receita. E o mais incrível é que você vai poder oferecer produtos financeiros com a própria marca para o setor ou nicho que têm influência.</p>
            <div class="action-holder">
-              <a href="#" class="btn neutral-btn md">Começar Agora</a>
+              <a href="#" class="btn neutral-btn md">Comece Agora</a>
           </div>
        </div>
       </section>
@@ -458,7 +544,7 @@
               <div class="row">
                   <div class="col-sm-12">
                       <div class="ft-logo-holder">
-                          <img src="img/subtle-logo.png">
+                          <img src="img/subtle-logo.svg">
                       </div>
                   </div>
               </div>
@@ -469,7 +555,6 @@
                         <a href="https://marketplace-sandbox.qgx.codes/entrar" class="link subtle-l">Entrar</a>
                         <a target="_blank" href="#" class="link subtle-l">Termos de Uso</a>
                         <a target="_blank" href="#" class="link subtle-l">Políticas de Privacidade</a>
-                        <a target="_blank" href="https://forms.gle/YidwWGAXQd98e32T8" class="link subtle-l">Canal de Denúncias</a>
                         <a target="_blank" href="https://forms.gle/W5EXuAF8uZ3zSGMs8" class="link subtle-l">Ouvidoria</a>
                         <a target="_blank" href="/politica-de-compliance.pdf" class="link subtle-l">Política de Compliance</a>
                     </nav>
