Added Plans Pages

--- a/planos.html
+++ b/planos.html
@@ -181,20 +181,23 @@
 
     <!-- Our Plans Section  -->
 
-    <section class="our-plans spread">
-        <div class="container"> 
+    <section class="our-plans">
 
-
-            <div class="row">
-                <div class="col">
-                    <div class="heading-block">
-                        <h4 class="heading xmd dark">Vamos construir seu projeto financeiro juntos.</h4>
+        <div class="title-holder">
+            <img class="features-detail" src="img/asset-features.svg"></img>
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12 col-md-8">
+                        <h3 class="heading lg w-md dark">Vamos construir seu <b>projeto financeiro juntos.</b></h3>
                     </div>
                 </div>
             </div>
+        </div>
+
+        <div class="container"> 
 
 
-            <div class="row bt-spread">
+            <div class="row spread">
 
              
 
@@ -264,7 +267,7 @@
                             </span>
                         </div>
                         <div class="action-holder">
-                            <a href="https://marketplace-sandbox.qgx.codes/entrar" class="btn neutral-btn md">Comece Agora</a>
+                            <a href="https://marketplace-sandbox.qgx.codes/entrar" class="btn neutral-btn md">Escolher Plano</a>
                         </div>
                     </div>
                 </div>
@@ -337,7 +340,7 @@
                             </span>
                         </div>
                         <div class="action-holder">
-                            <a href="https://marketplace-sandbox.qgx.codes/entrar" class="btn primary-btn md">Começar Agora</a>
+                            <a href="https://marketplace-sandbox.qgx.codes/entrar" class="btn primary-btn md">Escolher Plano</a>
                         </div>
                     </div>
                 </div>
@@ -410,7 +413,7 @@
                             </span>
                         </div>
                         <div class="action-holder">
-                            <a href="https://marketplace-sandbox.qgx.codes/plano-avancado" class="btn secondary-btn md">Consulte um especialista</a>
+                            <a href="https://marketplace-sandbox.qgx.codes/plano-avancado" class="btn secondary-btn md">Escolher Plano</a>
                         </div>
                     </div>
                 </div>
