--- a/standard.html
+++ b/standard.html
@@ -27,9 +27,9 @@
 </head>
 <body>
 
-    <!-- Header Comp -->
+     <!-- Header Comp -->
 
-    <header class="main-header">
+     <header class="main-header">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col col-md-4">
@@ -37,8 +37,10 @@
                 </div>
                 <div class="col col-md-8">
                    <nav class="main-nav desktop">
-                       <span class="caption subtle-w">Já possui uma conta?</span>
-                       <a href="https://marketplace-sandbox.qgx.codes/entrar" class="header-cta btn lg dark-btn">Entrar</a>
+                       <a href="https://marketplace-sandbox.qgx.codes/entrar" class="link white">Como monetizar</a>
+                       <a href="https://marketplace-sandbox.qgx.codes/entrar" class="link white">Preço</a>
+                       <a href="https://marketplace-sandbox.qgx.codes/entrar" class="link white">Entrar</a>
+                       <a href="https://marketplace-sandbox.qgx.codes/entrar" class="header-cta btn lg dark-btn">Comece Agora</a>
                    </nav>
                    <nav class="main-nav mob">
                     <a href="#" class="menu-link" data-toggle="modal" data-target="#menuModal">
