Ready to backend

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- OG Content -->
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <link rel="icon" href="favicon.png" />
+
     <!-- Open Graph -->
     <meta property="og:url" content="https://qgx.digital/"/>
     <meta itemprop="image" property="og:image" content="https://qgx.digital/tile.png"/>
@@ -33,14 +34,14 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col col-md-4">
-                    <a href="#" class="main-logo"><img src="img/main-logo.svg"></a>
+                    <a href="/" class="main-logo"><img src="img/main-logo.svg"></a>
                 </div>
                 <div class="col col-md-8">
                    <nav class="main-nav desktop">
-                       <a href="https://marketplace-sandbox.qgx.codes/entrar" class="link white">Como monetizar</a>
-                       <a href="https://marketplace-sandbox.qgx.codes/entrar" class="link white">Preço</a>
-                       <a href="https://marketplace-sandbox.qgx.codes/entrar" class="link white">Entrar</a>
-                       <a href="https://marketplace-sandbox.qgx.codes/entrar" class="header-cta btn lg dark-btn">Comece Agora</a>
+                       <a href="como-monetizar" class="link white">Como monetizar</a>
+                       <a href="standard" class="link white">Planos</a>
+                       <a href="entrar" class="link white">Entrar</a>
+                       <a href="standard" class="header-cta btn lg dark-btn">Comece Agora</a>
                    </nav>
                    <nav class="main-nav mob">
                     <a href="#" class="menu-link" data-toggle="modal" data-target="#menuModal">
@@ -74,7 +75,7 @@
                 <h1 class="heading lg white">Comece o seu próprio banco digital!</h1>
                 <p class="caption lg subtle-w">Criar um banco digital é bem mais simples do que você imagina. <b>Seja uma fintech, sem mudar quem você é.</b></p>
                 <div class="action-holder">
-                    <a href="https://marketplace-sandbox.qgx.codes/entrar" class="btn primary-btn md">Comece Agora</a>
+                    <a href="standard" class="btn primary-btn md">Comece Agora</a>
                     <a href="#more-section" class="btn neutral-btn md">Saiba Mais</a>
                 </div>
             </div>
@@ -89,7 +90,7 @@
          <p class="caption md subtle-w">e tenha uma fonte alternativa de receita. E o mais incrível é que você vai poder oferecer produtos financeiros com a própria marca para o setor ou nicho que têm influência.</p>
          <div class="action-holder">
             <a href="#second-anchor" class="btn primary-btn md">Quero saber mais</a>
-            <a href="https://marketplace-sandbox.qgx.codes/entrar" class="btn outline-btn md">Ver nossos planos</a>
+            <a href="standard" class="btn outline-btn md">Ver nossos planos</a>
         </div>
      </div>
     </section>
@@ -117,7 +118,7 @@
                       <div class="content-holder">
                           <h3 class="heading sm dark">Democratização do sistema financeiro</h3>
                           <p class="caption md subtle">Ganhe o controle das transações financeiras de toda a sua empresa. Com a QGX, você tem o controle sobre as suas taxas,  históricos de movimentações e muito mais.</p>
-                          <a href="#" class="link neutral-link">Comece Agora</a>
+                          <a href="standard" class="link neutral-link">Comece Agora</a>
                       </div>
                   </div>
               </div>
@@ -132,7 +133,7 @@
                     <div class="content-holder">
                         <h3 class="heading sm dark">Comece agora e cancele quando quiser</h3>
                         <p class="caption md subtle">Assim como nosso setup é extremamente rápido e fácil, você não fica preso a nenhum contrato extenso e cheio de armadilhas. Comece agora e cancele quando quiser! <b>Estamos aqui para melhorar o seu negócio e crescer junto com você!</b></p>
-                        <a href="#" class="link neutral-link">Comece Agora</a>
+                        <a href="advanced" class="link neutral-link">Comece Agora</a>
                     </div>
                 </div>
             </div>
@@ -147,7 +148,7 @@
                     <div class="content-holder">
                         <h3 class="heading sm dark">Monetize as transações da sua empresa</h3>
                         <p class="caption md subtle">Aqui, você cobra as taxas, ganha comissões pelas interações de funcionários e clientes, seja por uma recarga de celular, uma solicitação de empréstimo aprovada e muito mais.</p>
-                        <a href="#" class="link primary-link">Saiba Mais</a>
+                        <a href="como-monetizar" class="link primary-link">Saiba Mais</a>
                     </div>
                 </div>
             </div>
@@ -549,7 +550,7 @@
            <h6 class="heading md white">Nossa plataforma permite que você opere como um banco digital</h6>
            <p class="caption md subtle-w">e tenha uma fonte alternativa de receita. E o mais incrível é que você vai poder oferecer produtos financeiros com a própria marca para o setor ou nicho que têm influência.</p>
            <div class="action-holder">
-              <a href="#" class="btn primary-btn md">Comece Agora</a>
+              <a href="standard" class="btn primary-btn md">Comece Agora</a>
           </div>
        </div>
       </section>
@@ -568,10 +569,9 @@
               <div class="row">
                 <div class="col-sm-12">
                     <nav class="footer-nav">
-                        <a href="https://marketplace-sandbox.qgx.codes/entrar" class="link subtle-l">Comece Agora</a>
-                        <a href="https://marketplace-sandbox.qgx.codes/entrar" class="link subtle-l">Entrar</a>
-                        <a target="_blank" href="#" class="link subtle-l">Termos de Uso</a>
-                        <a target="_blank" href="#" class="link subtle-l">Políticas de Privacidade</a>
+                        <a href="standard" class="link subtle-l">Comece Agora</a>
+                        <a href="entrar" class="link subtle-l">Entrar</a>
+                        <a href="politicas-de-privacidade" class="link subtle-l">Políticas de Privacidade</a>
                         <a target="_blank" href="https://forms.gle/W5EXuAF8uZ3zSGMs8" class="link subtle-l">Ouvidoria</a>
                         <a target="_blank" href="/politica-de-compliance.pdf" class="link subtle-l">Política de Compliance</a>
                     </nav>
@@ -613,11 +613,11 @@
                     <div class="row">
                         <div class="col">
                             <nav class="mob-nav">
-                                <a href="https://marketplace-sandbox.qgx.codes/entrar" class="link white">Home</a>
-                                <a href="https://marketplace-sandbox.qgx.codes/entrar" class="link white">Como monetizar</a>
-                                <a href="https://marketplace-sandbox.qgx.codes/entrar" class="link white">Preço</a>
-                                <a href="https://marketplace-sandbox.qgx.codes/entrar" class="link white">Entrar</a>
-                                <a href="https://marketplace-sandbox.qgx.codes/entrar" class="link primary-link">Começar Agora</a>
+                                <a href="/" class="link white">Home</a>
+                                <a href="como-monetizar" class="link white">Como monetizar</a>
+                                <a href="standard" class="link white">Planos</a>
+                                <a href="entrar" class="link white">Entrar</a>
+                                <a href="standard" class="link primary-link">Começar Agora</a>
                             </nav>
                             <nav class="mob-social-nav">
                                 <a target="_blank" href="https://www.facebook.com/qgxpagamentos" class="link white"><i class="icon icon-facebook"></i> Facebook</a>
