--- a/standard.html
+++ b/standard.html
@@ -12,35 +12,34 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <link rel="icon" href="favicon.png" />
     <!-- Open Graph -->
-    <meta property="og:url" content="https://qgx.digital/"/>
+    <meta property="og:url" content="https://qgx.digital/standard"/>
     <meta itemprop="image" property="og:image" content="https://qgx.digital/tile.png"/>
     <meta property="og:image:width" content="300">
     <meta property="og:image:height" content="300">
-    <meta property="og:title" content="QGX Pagamentos | Comece o seu próprio banco digital!"/>
+    <meta property="og:title" content="Nossos Planos | Standard | QGX Pagamentos"/>
     <meta property="og:description" content="Nossa plataforma permite que você opere como um banco digital e tenha uma fonte alternativa de receita. E o mais incrível é que você vai poder oferecer produtos financeiros com a própria marca para o setor ou nicho que têm influência."/>
     <meta property="og:site_name" content="QGX"/>
     <meta property="og:type" content="website"/>
 
     <meta name="HandheldFriendly" content="true">
     <meta name="author" content="Vitor Pinho"/>
-    <title>QGX Pagamentos | Comece o seu próprio banco digital!</title>
+    <title>Nossos Planos | Standard | QGX Pagamentos</title>
 </head>
 <body>
 
      <!-- Header Comp -->
 
-     <header class="main-header">
+    <header class="main-header">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col col-md-4">
-                    <a href="#" class="main-logo"><img src="img/main-logo.svg"></a>
+                    <a href="/" class="main-logo"><img src="img/main-logo.svg"></a>
                 </div>
                 <div class="col col-md-8">
                    <nav class="main-nav desktop">
-                       <a href="https://marketplace-sandbox.qgx.codes/entrar" class="link white">Como monetizar</a>
-                       <a href="https://marketplace-sandbox.qgx.codes/entrar" class="link white">Preço</a>
-                       <a href="https://marketplace-sandbox.qgx.codes/entrar" class="link white">Entrar</a>
-                       <a href="https://marketplace-sandbox.qgx.codes/entrar" class="header-cta btn lg dark-btn">Comece Agora</a>
+                       <a href="como-monetizar" class="link white">Como monetizar</a>
+                       <a href="standard" class="link white">Planos</a>
+                       <a href="entrar" class="link white">Entrar</a>
                    </nav>
                    <nav class="main-nav mob">
                     <a href="#" class="menu-link" data-toggle="modal" data-target="#menuModal">
@@ -114,8 +113,9 @@
                         <span class="caption xmd subtle-w">Qualidade superior e menor preço do mercado. <i class="icon icon-check positive"></i></span>
                         <span class="caption xmd subtle-w">Cancele quando quiser <i class="icon icon-check positive"></i></span>
                         <div class="action-holder">
-                           <a href="#" class="btn md primary-btn">Escolher Plano</a>
-                        </div>
+                            <a href="fale-conosco" class="btn md outline-btn">Falar com especialista</a>
+                            <a href="criar-conta" class="btn md primary-btn">Escolher Plano</a>
+                         </div>
                     </div>
                 </div>
             </div>
@@ -208,8 +208,9 @@
                             </span>
                         </div>
                         <div class="action-holder">
-                            <a href="https://marketplace-sandbox.qgx.codes/entrar" class="btn neutral-btn md">Escolher Plano</a>
-                        </div>
+                            <a href="fale-conosco" class="btn md neutral-btn">Falar com especialista</a>
+                            <a href="criar-conta" class="btn md neutral-btn">Escolher Plano</a>
+                         </div>
                     </div>
                 </div>
 
@@ -281,8 +282,9 @@
                             </span>
                         </div>
                         <div class="action-holder">
-                            <a href="https://marketplace-sandbox.qgx.codes/entrar" class="btn primary-btn md">Escolher Plano</a>
-                        </div>
+                            <a href="fale-conosco" class="btn md neutral-btn">Falar com especialista</a>
+                            <a href="criar-conta" class="btn md primary-btn">Escolher Plano</a>
+                         </div>
                     </div>
                 </div>
 
@@ -354,8 +356,9 @@
                             </span>
                         </div>
                         <div class="action-holder">
-                            <a href="https://marketplace-sandbox.qgx.codes/plano-avancado" class="btn secondary-btn md">Escolher Plano</a>
-                        </div>
+                            <a href="fale-conosco" class="btn md outline-btn">Falar com especialista</a>
+                            <a href="criar-conta" class="btn md secondary-btn">Escolher Plano</a>
+                         </div>
                     </div>
                 </div>
 
@@ -367,93 +370,92 @@
 
     <section class="bottom-pool">
         <div class="bottom-pool-content">
-           <h6 class="heading md white">Nossa plataforma permite que você opere como um banco digital</h6>
-           <p class="caption md subtle-w">e tenha uma fonte alternativa de receita. E o mais incrível é que você vai poder oferecer produtos financeiros com a própria marca para o setor ou nicho que têm influência.</p>
+           <h6 class="heading md white">Temos um time de especialistas pronto para te atender</h6>
+           <p class="caption md subtle-w">Descubra tudo o que podemos fazer por você!</p>
            <div class="action-holder">
-              <a href="#" class="btn primary-btn md">Comece Agora</a>
+              <a href="#" class="btn neutral-btn md">Falar com especialista</a>
           </div>
        </div>
-      </section>
+     </section>
 
       <!-- Footer -->
 
       <footer>
-          <div class="container">
-              <div class="row">
-                  <div class="col-sm-12">
-                      <div class="ft-logo-holder">
-                          <img src="img/subtle-logo.svg">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-12">
+                    <div class="ft-logo-holder">
+                        <img src="img/subtle-logo.svg">
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+              <div class="col-sm-12">
+                  <nav class="footer-nav">
+                      <a href="standard" class="link subtle-l">Comece Agora</a>
+                      <a href="entrar" class="link subtle-l">Entrar</a>
+                      <a href="politicas-de-privacidade" class="link subtle-l">Políticas de Privacidade</a>
+                      <a target="_blank" href="https://forms.gle/W5EXuAF8uZ3zSGMs8" class="link subtle-l">Ouvidoria</a>
+                      <a target="_blank" href="/politica-de-compliance.pdf" class="link subtle-l">Política de Compliance</a>
+                  </nav>
+              </div>
+          </div>
+          <div class="row">
+              <div class="col-sm-12">
+                  <nav class="social-nav">
+                      <a target="_blank" href="https://www.facebook.com/qgxpagamentos" class="link social-link"><i class="icon icon-facebook"></i></a>
+                      <a target="_blank" href="https://www.instagram.com/qgxpagamentos/" class="link social-link"><i class="icon icon-instagram"></i></a>
+                      <a target="_blank" href="https://www.linkedin.com/company/qgx-pagamentos/" class="link social-link"><i class="icon icon-linkedin"></i></a>
+                      <a target="_blank" href="https://m.me/qgxpagamentos" class="link social-link"><i class="icon icon-messenger"></i></a>
+                  </nav>
+              </div>
+          </div>
+          <div class="row">
+              <div class="col-sm-12">
+                  <span class="signature">© QGX 2020 - Todos os direitos reservados</span>
+              </div>
+          </div>
+        </div>
+    </footer>
+
+    <!-- Modal -->
+      <div class="modal fade" id="menuModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+          <div class="modal-dialog" role="document">
+          <div class="modal-content menu">
+              <div class="container">
+                  <div class="row">
+                      <div class="col col-md-4">
+                          <a href="#" class="main-logo"><img src="img/subtle-logo.svg"></a>
+                      </div>
+                      <div class="col col-md-8">
+                         <nav class="main-nav mob">
+                          <a href="#" class="menu-link close-link" data-dismiss="modal" aria-label="Close"><i class="icon icon-close"></i></a>
+                         </nav>
+                      </div>
+                  </div>
+                  <div class="row">
+                      <div class="col">
+                          <nav class="mob-nav">
+                              <a href="/" class="link white">Home</a>
+                              <a href="como-monetizar" class="link white">Como monetizar</a>
+                              <a href="standard" class="link white">Planos</a>
+                              <a href="entrar" class="link white">Entrar</a>
+                              <a href="standard" class="link primary-link">Começar Agora</a>
+                          </nav>
+                          <nav class="mob-social-nav">
+                              <a target="_blank" href="https://www.facebook.com/qgxpagamentos" class="link white"><i class="icon icon-facebook"></i> Facebook</a>
+                              <a target="_blank" href="https://www.instagram.com/qgxpagamentos/" class="link white"><i class="icon icon-instagram"></i> Instagram</a>
+                              <a target="_blank" href="https://www.linkedin.com/company/qgx-pagamentos/" class="link white"><i class="icon icon-linkedin"></i> LinkedIn</a>
+                              <a target="_blank" href="https://m.me/qgxpagamentos" class="link white"><i class="icon icon-messenger"></i> Messenger</a>
+                          </nav>
                       </div>
                   </div>
               </div>
-              <div class="row">
-                <div class="col-sm-12">
-                    <nav class="footer-nav">
-                        <a href="https://marketplace-sandbox.qgx.codes/entrar" class="link subtle-l">Comece Agora</a>
-                        <a href="https://marketplace-sandbox.qgx.codes/entrar" class="link subtle-l">Entrar</a>
-                        <a target="_blank" href="#" class="link subtle-l">Termos de Uso</a>
-                        <a target="_blank" href="#" class="link subtle-l">Políticas de Privacidade</a>
-                        <a target="_blank" href="https://forms.gle/W5EXuAF8uZ3zSGMs8" class="link subtle-l">Ouvidoria</a>
-                        <a target="_blank" href="/politica-de-compliance.pdf" class="link subtle-l">Política de Compliance</a>
-                    </nav>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-12">
-                    <nav class="social-nav">
-                        <a target="_blank" href="https://www.facebook.com/qgxpagamentos" class="link social-link"><i class="icon icon-facebook"></i></a>
-                        <a target="_blank" href="https://www.instagram.com/qgxpagamentos/" class="link social-link"><i class="icon icon-instagram"></i></a>
-                        <a target="_blank" href="https://www.linkedin.com/company/qgx-pagamentos/" class="link social-link"><i class="icon icon-linkedin"></i></a>
-                        <a target="_blank" href="https://m.me/qgxpagamentos" class="link social-link"><i class="icon icon-messenger"></i></a>
-                    </nav>
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-12">
-                    <span class="signature">© QGX 2020 - Todos os direitos reservados</span>
-                </div>
-            </div>
+
           </div>
-      </footer>
-
-      <!-- Modal -->
-        <div class="modal fade" id="menuModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-            <div class="modal-dialog" role="document">
-            <div class="modal-content menu">
-                <div class="container">
-                    <div class="row">
-                        <div class="col col-md-4">
-                            <a href="#" class="main-logo"><img src="img/subtle-logo.svg"></a>
-                        </div>
-                        <div class="col col-md-8">
-                           <nav class="main-nav mob">
-                            <a href="#" class="menu-link close-link" data-dismiss="modal" aria-label="Close"><i class="icon icon-close"></i></a>
-                           </nav>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col">
-                            <nav class="mob-nav">
-                                <a href="https://marketplace-sandbox.qgx.codes/entrar" class="link white">Home</a>
-                                <a href="https://marketplace-sandbox.qgx.codes/entrar" class="link white">Como monetizar</a>
-                                <a href="https://marketplace-sandbox.qgx.codes/entrar" class="link white">Preço</a>
-                                <a href="https://marketplace-sandbox.qgx.codes/entrar" class="link white">Entrar</a>
-                                <a href="https://marketplace-sandbox.qgx.codes/entrar" class="link primary-link">Começar Agora</a>
-                            </nav>
-                            <nav class="mob-social-nav">
-                                <a target="_blank" href="https://www.facebook.com/qgxpagamentos" class="link white"><i class="icon icon-facebook"></i> Facebook</a>
-                                <a target="_blank" href="https://www.instagram.com/qgxpagamentos/" class="link white"><i class="icon icon-instagram"></i> Instagram</a>
-                                <a target="_blank" href="https://www.linkedin.com/company/qgx-pagamentos/" class="link white"><i class="icon icon-linkedin"></i> LinkedIn</a>
-                                <a target="_blank" href="https://m.me/qgxpagamentos" class="link white"><i class="icon icon-messenger"></i> Messenger</a>
-                            </nav>
-                        </div>
-                    </div>
-                </div>
-
-            </div>
-            </div>
-            </div>
-        </section>
+          </div>
+          </div>
+      </div>
         
       <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
