--- a/politicas-de-privacidade.html
+++ b/politicas-de-privacidade.html
@@ -58,7 +58,7 @@
         <div class="container">
             <div class="row align-items-center spread">
                 <div class="col">
-                    <h1 class="heading lg white spread">POLÍTICA DE PRIVACIDADE</h1>
+                    <h1 class="heading lg white spread">POLÍTICAS DE PRIVACIDADE</h1>
 
 <p>Esta Política de  Privacidade (&ldquo;<u>Política</u>&rdquo;) se aplica a todos os serviços prestados pela <strong>QGX PAGAMENTOS LTDA.</strong>, com sede na Av. Presidente Juscelino Kubitschek, nº 2041, sala 1002,  Vila Nova Conceição, São Paulo/SP, inscrita no CNPJ/MF sob o nº  35.813.685/0001-70 (&ldquo;<u>Instituição de  Pagamento</u>&rdquo;), em razão da utilização pelo USUÁRIO dos serviços prestados pela INSTITUIÇÃO  DE PAGAMENTO.</p>
 <p><strong>A presente Política tem  o objetivo de informar, de forma clara e completa, sobre como haverá o  Tratamento das Informações Pessoais do USUÁRIO, em decorrência da utilização dos  serviços prestados pela INSTITUIÇÃO  DE PAGAMENTO</strong>.</p>
